--- a/project/tsconfig.base.json
+++ b/project/tsconfig.base.json
@@ -17,8 +17,9 @@
     "paths": {
       "@avylando-readme/core": ["libs/core/src/index.ts"],
       "@project/authentication": ["libs/account/authentication/src/index.ts"],
+      "@project/blog-comment": ["libs/blog/comment/src/index.ts"],
       "@project/blog-user": ["libs/account/blog-user/src/index.ts"],
-      "@project/post": ["libs/blog/post/src/index.ts"]
+      "@project/blog-post": ["libs/blog/post/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
