--- a/project/tsconfig.base.json
+++ b/project/tsconfig.base.json
@@ -17,6 +17,7 @@
     "paths": {
       "@avylando-readme/core": ["libs/core/src/index.ts"],
       "@avylando/config": ["libs/config/src/index.ts"],
+      "@project/account-config": ["libs/account/config/src/index.ts"],
       "@project/authentication": ["libs/account/authentication/src/index.ts"],
       "@project/blog-comment": ["libs/blog/comment/src/index.ts"],
       "@project/blog-post": ["libs/blog/post/src/index.ts"],
