--- a/project/tsconfig.base.json
+++ b/project/tsconfig.base.json
@@ -20,6 +20,7 @@
       "@project/account-config": ["libs/account/config/src/index.ts"],
       "@project/authentication": ["libs/account/authentication/src/index.ts"],
       "@project/blog-comment": ["libs/blog/comment/src/index.ts"],
+      "@project/blog-config": ["libs/blog/config/src/index.ts"],
       "@project/blog-post": ["libs/blog/post/src/index.ts"],
       "@project/blog-user": ["libs/account/blog-user/src/index.ts"]
     }
