--- a/project/apps/account/account.example.env
+++ b/project/apps/account/account.example.env
@@ -2,7 +2,8 @@ PORT=3333
 GLOBAL_PREFIX=account
 MONGO_DB=readme-account
 MONGO_HOST=localhost
-MONGO_PORT=27017
+MONGO_PORT=27020
 MONGO_USER=admin
 MONGO_PASSWORD=123456
 MONGO_AUTH_BASE=admin
+MONGO_EXPRESS_PORT=8081
