--- a/project/apps/blog/blog.example.env
+++ b/project/apps/blog/blog.example.env
@@ -2,7 +2,8 @@ PORT=3334
 GLOBAL_PREFIX=blog
 MONGO_DB=readme-blog
 MONGO_HOST=localhost
-MONGO_PORT=27017
+MONGO_PORT=27045
 MONGO_USER=admin
 MONGO_PASSWORD=123456
 MONGO_AUTH_BASE=admin
+MONGO_EXPRESS_PORT=8082
