--- a/project/package.json
+++ b/project/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/mongoose": "^11.0.1",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/swagger": "^8.1.1",
     "axios": "^1.6.0",
