feat: migrate from MongoDB to PostgreSQL with updated configuration and Docker setup

--- a/project/apps/blog/blog.example.env
+++ b/project/apps/blog/blog.example.env
@@ -1,9 +1,9 @@
 PORT=3334
 GLOBAL_PREFIX=blog
-MONGO_DB=readme-blog
-MONGO_HOST=localhost
-MONGO_PORT=27045
-MONGO_USER=admin
-MONGO_PASSWORD=123456
-MONGO_AUTH_BASE=admin
-MONGO_EXPRESS_PORT=8082
+POSTGRES_DB=readme-blog
+POSTGRES_HOST=localhost
+POSTGRES_PORT=27045
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=123456
+POSTGRES_AUTH_BASE=admin
+POSTGRES_EXPRESS_PORT=8082
