--- a/project/tsconfig.base.json
+++ b/project/tsconfig.base.json
@@ -21,7 +21,7 @@
       "@project/authentication": ["libs/account/authentication/src/index.ts"],
       "@project/blog-comment": ["libs/blog/comment/src/index.ts"],
       "@project/blog-config": ["libs/blog/config/src/index.ts"],
-      "@project/blog-model": ["libs/blog/model/src/index.ts"],
+      "@project/blog-models": ["libs/blog/models/src/index.ts"],
       "@project/blog-post": ["libs/blog/post/src/index.ts"],
       "@project/blog-user": ["libs/account/blog-user/src/index.ts"]
     }
