--- a/project/package.json
+++ b/project/package.json
@@ -10,6 +10,7 @@
     "@nestjs/mongoose": "^11.0.1",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/swagger": "^8.1.1",
+    "@prisma/client": "^6.5.0",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -44,6 +45,7 @@
     "jest-environment-node": "^29.4.1",
     "nx": "19.4.3",
     "prettier": "^2.6.2",
+    "prisma": "^6.5.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.4.2",
