--- a/project/apps/blog/blog.example.env
+++ b/project/apps/blog/blog.example.env
@@ -1,8 +1,10 @@
 PORT=3334
 GLOBAL_PREFIX=blog
-POSTGRES_DB=readme-blog
+POSTGRES_DB=readme
 POSTGRES_HOST=localhost
-POSTGRES_PORT=27045
+POSTGRES_PORT=5432
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=123456
-POSTGRES_EXPRESS_PORT=8082
+PGADMIN_PORT=8082
+PGADMIN_DEFAULT_EMAIL=example@mail.com
+PGADMIN_DEFAULT_PASSWORD=your-password
