--- a/project/apps/blog/docker-compose.dev.yml
+++ b/project/apps/blog/docker-compose.dev.yml
@@ -14,8 +14,7 @@ services:
       - ${POSTGRES_PORT}:${POSTGRES_PORT}
 
     healthcheck:
-      test:
-        ['CMD-SHELL', 'pg_isready -U ${POSTGRES_USER} -d {POSTGRES_PASSWORD}']
+      test: ['CMD-SHELL', 'pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}']
       interval: 10s
       timeout: 5s
       retries: 5
