--- a/project/apps/account/project.json
+++ b/project/apps/account/project.json
@@ -22,6 +22,13 @@
     },
     "db:compose": {
       "command": "docker compose -f ./apps/account/docker-compose.dev.yml --env-file ./apps/account/account.env up -d"
+    },
+    "db:seed": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "npx ts-node -r tsconfig-paths/register -P ./apps/account/tsconfig.app.json ./apps/account/src/seed.ts",
+        "cwd": "."
+      }
     }
   }
 }
