--- a/project/apps/blog/project.json
+++ b/project/apps/blog/project.json
@@ -41,21 +41,24 @@
       "executor": "nx:run-commands",
       "options": {
         "command": "npx prisma migrate reset --schema ./schema.prisma --force --skip-generate --skip-seed",
-        "cwd": "libs/blog/models/prisma"
+        "cwd": "libs/blog/models/prisma",
+        "envFile": "apps/blog/blog.env"
       }
     },
     "db:generate": {
       "executor": "nx:run-commands",
       "options": {
         "command": "npx prisma generate --schema ./schema.prisma",
-        "cwd": "libs/blog/models/prisma"
+        "cwd": "libs/blog/models/prisma",
+        "envFile": "apps/blog/blog.env"
       }
     },
     "db:seed": {
       "executor": "nx:run-commands",
       "options": {
         "command": "npx ts-node -r tsconfig-paths/register seed.ts",
-        "cwd": "libs/blog/models/src"
+        "cwd": "libs/blog/models/src",
+        "envFile": "apps/blog/blog.env"
       }
     }
   }
