--- a/project/apps/blog/project.json
+++ b/project/apps/blog/project.json
@@ -34,7 +34,8 @@
       "executor": "nx:run-commands",
       "options": {
         "command": "npx prisma migrate dev --schema ./schema.prisma --skip-generate --skip-seed",
-        "cwd": "libs/blog/models/prisma"
+        "cwd": "libs/blog/models/prisma",
+        "envFile": "apps/blog/blog.env"
       }
     },
     "db:reset": {
