--- a/project/apps/blog/project.json
+++ b/project/apps/blog/project.json
@@ -26,7 +26,7 @@
     "db:lint": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "npx prisma validate --schema ./schema.prisma",
+        "command": "npx prisma format --schema ./schema.prisma",
         "cwd": "libs/blog/models/prisma"
       }
     },
