--- a/project/package.json
+++ b/project/package.json
@@ -7,7 +7,9 @@
   "dependencies": {
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/mongoose": "^11.0.1",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/swagger": "^8.1.1",
     "@prisma/client": "^6.5.0",
@@ -15,6 +17,9 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "mongoose": "^8.12.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0"
@@ -37,6 +42,9 @@
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.16.9",
+    "@types/passport": "^1.0.17",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "@typescript-eslint/eslint-plugin": "^7.3.0",
     "@typescript-eslint/parser": "^7.3.0",
     "eslint": "~8.57.0",
