--- a/project/tsconfig.base.json
+++ b/project/tsconfig.base.json
@@ -23,7 +23,8 @@
       "@project/blog-config": ["libs/blog/config/src/index.ts"],
       "@project/blog-models": ["libs/blog/models/src/index.ts"],
       "@project/blog-post": ["libs/blog/post/src/index.ts"],
-      "@project/blog-user": ["libs/account/blog-user/src/index.ts"]
+      "@project/blog-user": ["libs/account/blog-user/src/index.ts"],
+      "@project/pipes": ["libs/pipes/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
