--- a/project/package.json
+++ b/project/package.json
@@ -11,12 +11,16 @@
     "@nestjs/mongoose": "^11.0.1",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^8.1.1",
     "@prisma/client": "^6.5.0",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
+    "fs-extra": "^11.3.0",
+    "mime-types": "^3.0.1",
     "mongoose": "^8.12.1",
+    "multer": "^1.4.5-lts.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -41,6 +45,7 @@
     "@swc/helpers": "~0.5.11",
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.4.0",
+    "@types/mime-types": "^2.1.4",
     "@types/node": "~18.16.9",
     "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4.0.1",
