--- a/project/package.json
+++ b/project/package.json
@@ -13,6 +13,7 @@
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^8.1.1",
+    "@nx/devkit": "19.4.3",
     "@prisma/client": "^6.5.0",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
@@ -37,15 +38,18 @@
     "@nx/js": "19.4.3",
     "@nx/nest": "19.4.3",
     "@nx/node": "19.4.3",
+    "@nx/plugin": "^19.4.3",
     "@nx/web": "19.4.3",
     "@nx/webpack": "19.4.3",
     "@nx/workspace": "19.4.3",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.4.0",
     "@types/mime-types": "^2.1.4",
+    "@types/multer": "^1.4.12",
     "@types/node": "~18.16.9",
     "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4.0.1",
