feat: add file storage configuration and uploader modules with MongoDB integration

--- a/project/apps/file-storage/project.json
+++ b/project/apps/file-storage/project.json
@@ -19,6 +19,9 @@
           "buildTarget": "file-storage:build:production"
         }
       }
+    },
+    "db:compose": {
+      "command": "docker compose -f ./apps/file-storage/docker-compose.dev.yml --env-file ./apps/file-storage/file-storage.env up -d"
     }
   }
 }
