--- a/project/package.json
+++ b/project/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
+    "dayjs": "^1.11.13",
     "fs-extra": "^11.3.0",
     "mime-types": "^3.0.1",
     "mongoose": "^8.12.1",
@@ -47,6 +48,7 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/bcrypt": "^5.0.2",
+    "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.4.0",
     "@types/mime-types": "^2.1.4",
     "@types/multer": "^1.4.12",
