feat: implement file uploader module with upload and retrieval functionality

--- a/project/apps/file-storage/file-storage.example.env
+++ b/project/apps/file-storage/file-storage.example.env
@@ -1,5 +1,6 @@
 PORT=3335
 GLOBAL_PREFIX=file-storage
+UPLOAD_DIRECTORY=/static/uploads
 MONGO_DB=readme-file-storage
 MONGO_HOST=localhost
 MONGO_PORT=27020
