--- a/project/apps/file-storage/file-storage.example.env
+++ b/project/apps/file-storage/file-storage.example.env
@@ -1,6 +1,6 @@
 PORT=3335
 GLOBAL_PREFIX=file-storage
-UPLOAD_DIRECTORY=/static/uploads
+UPLOAD_DIRECTORY=./static/uploads
 MONGO_DB=readme-file-storage
 MONGO_HOST=localhost
 MONGO_PORT=27020
@@ -8,3 +8,4 @@ MONGO_USER=admin
 MONGO_PASSWORD=123456
 MONGO_AUTH_BASE=admin
 MONGO_EXPRESS_PORT=8083
+SERVE_ROOT=/static
