feat: implement file uploader module with controller, service, repository, and entity for file management

--- a/project/apps/file-storage/file-storage.example.env
+++ b/project/apps/file-storage/file-storage.example.env
@@ -1,5 +1,5 @@
 PORT=3335
-GLOBAL_PREFIX=file-storage
+GLOBAL_PREFIX=files
 UPLOAD_DIRECTORY=./static/uploads
 MONGO_DB=readme-file-storage
 MONGO_HOST=localhost
