--- a/project/apps/file-storage/file-storage.example.env
+++ b/project/apps/file-storage/file-storage.example.env
@@ -1,6 +1,12 @@
 PORT=3335
 GLOBAL_PREFIX=files
 UPLOAD_DIRECTORY=./static/uploads
+AVATARS_DIR=avatars
+POST_ASSETS_ROOT=posts
+POST_IMAGES_DIR=images
+POST_VIDEOS_DIR=videos
+SERVE_ROOT=/static
+
 MONGO_DB=readme-file-storage
 MONGO_HOST=localhost
 MONGO_PORT=27020
@@ -8,4 +14,3 @@ MONGO_USER=admin
 MONGO_PASSWORD=123456
 MONGO_AUTH_BASE=admin
 MONGO_EXPRESS_PORT=8083
-SERVE_ROOT=/static
