feat: add MongoDB and Mongo Express services with configuration for notification app

--- a/project/apps/notification/project.json
+++ b/project/apps/notification/project.json
@@ -19,6 +19,9 @@
           "buildTarget": "notification:build:production"
         }
       }
+    },
+    "db:compose": {
+      "command": "docker compose -f ./apps/notification/docker-compose.dev.yml --env-file ./apps/notification/notification.env up -d"
     }
   }
 }
