--- a/project/tsconfig.base.json
+++ b/project/tsconfig.base.json
@@ -28,6 +28,7 @@
       "@project/exception-filters": ["libs/exception-filters/src/index.ts"],
       "@project/file-storage-config": ["libs/file-storage/config/src/index.ts"],
       "@project/file-uploader": ["libs/file-storage/uploader/src/index.ts"],
+      "@project/notification-config": ["libs/notification/config/src/index.ts"],
       "@project/pipes": ["libs/pipes/src/index.ts"]
     }
   },
