feat: add RabbitMQ configuration and services to notification app

--- a/project/apps/notification/notification.example.env
+++ b/project/apps/notification/notification.example.env
@@ -8,3 +8,11 @@ MONGO_USER=admin
 MONGO_PASSWORD=123456
 MONGO_AUTH_BASE=admin
 MONGO_EXPRESS_PORT=8084
+
+RABBIT_QUEUE=readme.notification.income
+RABBIT_HOST=localhost
+RABBIT_PORT=5455
+RABBIT_USER=admin
+RABBIT_PASSWORD=123456
+RABBIT_EXCHANGE=readme.notification
+RABBIT_MANAGEMENT_PORT=15672
