--- a/project/apps/notification/docker-compose.dev.yml
+++ b/project/apps/notification/docker-compose.dev.yml
@@ -38,5 +38,23 @@ services:
       ME_CONFIG_MONGODB_URL: mongodb://${MONGO_USER}:${MONGO_PASSWORD}@readme-notification-mongo:${MONGO_PORT}/
       PORT: ${MONGO_EXPRESS_PORT}
 
+  readme-notification-rabbit:
+    image: rabbitmq:3-management
+    restart: always
+    container_name: readme-notification-rabbit
+    ports:
+      - ${RABBIT_PORT}:${RABBIT_PORT}
+      - ${RABBIT_MANAGEMENT_PORT}:${RABBIT_MANAGEMENT_PORT}
+
+    environment:
+      RABBITMQ_DEFAULT_USER: ${RABBIT_USER}
+      RABBITMQ_DEFAULT_PASS: ${RABBIT_PASSWORD}
+
+    healthcheck:
+      test: rabbitmq-diagnostics -q ping
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
 volumes:
   readme-notification-mongo:
