feat: integrate RabbitMQ for account notifications and add subscriber management

--- a/project/apps/account/account.example.env
+++ b/project/apps/account/account.example.env
@@ -12,7 +12,7 @@ MONGO_EXPRESS_PORT=8081
 JWT_TOKEN_SECRET=secret
 JWT_TOKEN_EXPIRATION=5m
 
-RABBIT_QUEUE=readme.account.income
+RABBIT_QUEUE=readme.account.outcome
 RABBIT_HOST=localhost
 RABBIT_PORT=5455
 RABBIT_USER=admin
