--- a/project/tsconfig.base.json
+++ b/project/tsconfig.base.json
@@ -19,6 +19,7 @@
       "@avylando-readme/core": ["libs/core/src/index.ts"],
       "@avylando/config": ["libs/config/src/index.ts"],
       "@project/account-config": ["libs/account/config/src/index.ts"],
+      "@project/account-notify": ["libs/account/notify/src/index.ts"],
       "@project/authentication": ["libs/account/authentication/src/index.ts"],
       "@project/blog-comment": ["libs/blog/comment/src/index.ts"],
       "@project/blog-config": ["libs/blog/config/src/index.ts"],
