fix: update RabbitMQ configuration and add fake SMTP service to notification app

--- a/project/apps/account/account.example.env
+++ b/project/apps/account/account.example.env
@@ -14,7 +14,7 @@ JWT_TOKEN_EXPIRATION=5m
 
 RABBIT_QUEUE=readme.account.outcome
 RABBIT_HOST=localhost
-RABBIT_PORT=5455
-RABBIT_USER=admin
+RABBIT_PORT=5672
+RABBIT_USER=account-app
 RABBIT_PASSWORD=123456
 RABBIT_EXCHANGE=readme.notification
