--- a/project/apps/notification/docker-compose.dev.yml
+++ b/project/apps/notification/docker-compose.dev.yml
@@ -49,12 +49,24 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: ${RABBIT_USER}
       RABBITMQ_DEFAULT_PASS: ${RABBIT_PASSWORD}
+      RABBITMQ_NODE_PORT: ${RABBIT_PORT}
 
     healthcheck:
       test: rabbitmq-diagnostics -q ping
       interval: 10s
       timeout: 5s
       retries: 5
+
+  readme-notification-fakesmtp:
+    image: gessnerfl/fake-smtp-server:2.2.0
+    container_name: 'readme-notification-fakesmtp'
+    hostname: 'readme-notification-fakesmtp'
+    ports:
+      - '${FAKE_SMTP_PORT}:${FAKE_SMTP_PORT}'
+      - '${FAKE_SMTP_UI_PORT}:${FAKE_SMTP_UI_PORT}'
+
+    environment:
+      SPRING_APPLICATION_JSON: '{"server.port":${FAKE_SMTP_UI_PORT}}'
 
 volumes:
   readme-notification-mongo:
