--- a/project/apps/notification/notification.example.env
+++ b/project/apps/notification/notification.example.env
@@ -11,8 +11,11 @@ MONGO_EXPRESS_PORT=8084
 
 RABBIT_QUEUE=readme.notification.income
 RABBIT_HOST=localhost
-RABBIT_PORT=5455
+RABBIT_PORT=5672
 RABBIT_USER=admin
 RABBIT_PASSWORD=123456
 RABBIT_EXCHANGE=readme.notification
 RABBIT_MANAGEMENT_PORT=15672
+
+FAKE_SMTP_PORT=8025
+FAKE_SMTP_UI_PORT=8942
