feat: add mailer module and update dependencies
- Added @nestjs-modules/mailer and @nestjs/config to package.json for email handling and configuration management.
- Included class-validator and handlebars for validation and templating support.
- Updated tsconfig.base.json to include the new notification-mailer library path.

--- a/project/apps/notification/notification.example.env
+++ b/project/apps/notification/notification.example.env
@@ -19,3 +19,9 @@ RABBIT_MANAGEMENT_PORT=15672
 
 FAKE_SMTP_PORT=8025
 FAKE_SMTP_UI_PORT=8942
+
+MAIL_SMTP_HOST=localhost
+MAIL_SMTP_PORT=${FAKE_SMTP_PORT}
+MAIL_USER=admin
+MAIL_PASSWORD=123456
+MAIL_FROM=readme-app
