--- a/project/package.json
+++ b/project/package.json
@@ -6,7 +6,9 @@
   "private": true,
   "dependencies": {
     "@golevelup/nestjs-rabbitmq": "^5.3.0",
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mongoose": "^11.0.1",
@@ -19,8 +21,10 @@
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "dayjs": "^1.11.13",
     "fs-extra": "^11.3.0",
+    "handlebars": "^4.7.8",
     "mime-types": "^3.0.1",
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.2",
