--- a/project/apps/file-storage/file-storage.example.env
+++ b/project/apps/file-storage/file-storage.example.env
@@ -14,3 +14,10 @@ MONGO_USER=admin
 MONGO_PASSWORD=123456
 MONGO_AUTH_BASE=admin
 MONGO_EXPRESS_PORT=8083
+
+RABBIT_QUEUE=readme.file-storage.outcome
+RABBIT_HOST=localhost
+RABBIT_PORT=5672
+RABBIT_USER=file-storage-app
+RABBIT_PASSWORD=123456
+RABBIT_EXCHANGE=readme.notification
