--- a/project/libs/account/authentication/tsconfig.lib.json
+++ b/project/libs/account/authentication/tsconfig.lib.json
@@ -6,6 +6,7 @@
     "types": ["node"],
     "target": "es2021",
     "strictNullChecks": true,
+    "strict": false,
     "noImplicitAny": true,
     "strictBindCallApply": true,
     "forceConsistentCasingInFileNames": true,
