--- a/project/tsconfig.base.json
+++ b/project/tsconfig.base.json
@@ -21,6 +21,7 @@
       "@project/account-config": ["libs/account/config/src/index.ts"],
       "@project/account-notify": ["libs/account/notify/src/index.ts"],
       "@project/api-config": ["libs/api/config/src/index.ts"],
+      "@project/api-notify": ["libs/api/notify/src/index.ts"],
       "@project/authentication": ["libs/account/authentication/src/index.ts"],
       "@project/blog-comment": ["libs/blog/comment/src/index.ts"],
       "@project/blog-config": ["libs/blog/config/src/index.ts"],
