--- a/project/apps/account/account.example.env
+++ b/project/apps/account/account.example.env
@@ -9,8 +9,10 @@ MONGO_PASSWORD=123456
 MONGO_AUTH_BASE=admin
 MONGO_EXPRESS_PORT=8081
 
-JWT_TOKEN_SECRET=secret
-JWT_TOKEN_EXPIRATION=5m
+ACCESS_TOKEN_SECRET=secret
+ACCESS_TOKEN_EXPIRATION=5m
+REFRESH_TOKEN_SECRET=hhcj31dw3!we4
+REFRESH_TOKEN_EXPIRATION=30d
 
 RABBIT_QUEUE=readme.account.outcome
 RABBIT_HOST=localhost
