--- a/project/tsconfig.base.json
+++ b/project/tsconfig.base.json
@@ -32,6 +32,7 @@
       "@project/file-storage-config": ["libs/file-storage/config/src/index.ts"],
       "@project/file-storage-notify": ["libs/file-storage/notify/src/index.ts"],
       "@project/file-uploader": ["libs/file-storage/uploader/src/index.ts"],
+      "@project/interceptors": ["libs/interceptors/src/index.ts"],
       "@project/notification-config": ["libs/notification/config/src/index.ts"],
       "@project/notification-email-subscriber": [
         "libs/notification/email-subscriber/src/index.ts"
