refactor: update RabbitMQ configuration and handlers across services
- Changed RABBIT_EXCHANGE from 'readme.notification' to 'readme.exchange' in account and API environment files.
- Updated RABBIT_QUEUE from 'readme.api.outcome' to 'readme.api.income' in API environment file.
- Refactored RabbitMQ module initialization in app.module.ts to use new getApiRabbitMQOptions function.
- Removed deprecated RabbitSubscribe methods for post image and video uploads in BlogPostsController.
- Introduced new file uploader endpoints for handling avatar uploads and updated file upload logic.
- Removed unused DTOs related to post media uploads.
- Updated RabbitMQ handler names and routing keys in the file storage module.
- Refactored file upload service methods to simplify file handling logic.
- Added new constants for file uploader endpoints.

--- a/project/apps/account/account.example.env
+++ b/project/apps/account/account.example.env
@@ -19,4 +19,4 @@ RABBIT_HOST=localhost
 RABBIT_PORT=5672
 RABBIT_USER=account-app
 RABBIT_PASSWORD=123456
-RABBIT_EXCHANGE=readme.notification
+RABBIT_EXCHANGE=readme.exchange
