--- a/project/apps/file-storage/file-storage.example.env
+++ b/project/apps/file-storage/file-storage.example.env
@@ -15,9 +15,9 @@ MONGO_PASSWORD=123456
 MONGO_AUTH_BASE=admin
 MONGO_EXPRESS_PORT=8083
 
-RABBIT_QUEUE=readme.file-storage.outcome
+RABBIT_QUEUE=readme.file-storage.income
 RABBIT_HOST=localhost
 RABBIT_PORT=5672
 RABBIT_USER=file-storage-app
 RABBIT_PASSWORD=123456
-RABBIT_EXCHANGE=readme.notification
+RABBIT_EXCHANGE=readme.exchange
