--- a/project/apps/api/api.example.env
+++ b/project/apps/api/api.example.env
@@ -12,14 +12,15 @@ BLOG_PATH=blog
 FILE_STORAGE_PORT=3335
 FILE_STORAGE_HOST=localhost
 FILE_STORAGE_PATH=files
+FILE_STORAGE_RABBIT_QUEUE=readme.file-storage.income
 
 NOTIFICATION_PORT=3336
 NOTIFICATION_HOST=localhost
 NOTIFICATION_PATH=notification
 
-RABBIT_QUEUE=readme.api.outcome
+RABBIT_QUEUE=readme.api.income
 RABBIT_HOST=localhost
 RABBIT_PORT=5672
 RABBIT_USER=api-gateway
 RABBIT_PASSWORD=123456
-RABBIT_EXCHANGE=readme.notification
+RABBIT_EXCHANGE=readme.exchange
