--- a/project/package.json
+++ b/project/package.json
@@ -2,7 +2,9 @@
   "name": "@project/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "front": "http-server ../markup -p 3087 -c-1"
+  },
   "private": true,
   "dependencies": {
     "@golevelup/nestjs-rabbitmq": "^5.3.0",
@@ -26,6 +28,7 @@
     "dayjs": "^1.11.13",
     "fs-extra": "^11.3.0",
     "handlebars": "^4.7.8",
+    "http-server": "^14.1.1",
     "mime-types": "^3.0.1",
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.2",
