--- a/project/package.json
+++ b/project/package.json
@@ -35,6 +35,8 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0"
@@ -49,6 +51,7 @@
     "@nx/nest": "19.4.3",
     "@nx/node": "19.4.3",
     "@nx/plugin": "^19.4.3",
+    "@nx/react": "^19.4.3",
     "@nx/web": "19.4.3",
     "@nx/webpack": "19.4.3",
     "@nx/workspace": "19.4.3",
